# kh-insider-bot

./: README.md  pyproject.toml
src/: downloader.py  khinsider.py  main.py
