[tool.poetry]
name = "kh-insider-bot"
version = "0.1.0"
description = "kh-insider-bot"
authors = ["Ernesto ARTIGAS"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "4.13.3"
httpx = "^0.28.1"
aiofiles = "^25.1.0"
rich = "^14.2.0"

[tool.poetry.group.dev.dependencies]
deptry = "^0.24.0"

[tool.deptry]
known_first_party = ["core", "downloader", "khinsider"]